# work-diary

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: exmail.rs  lib.rs  main.rs
src/utils/: config.rs  exmail.rs  file.rs  log.rs  mod.rs  smb.rs
