[package]
name = "work-diary"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
lettre = "0.11.12"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"

[source.ustc]
registry = "sparse+https://mirrors.ustc.edu.cn/crates.io-index/"
