[package]
name = "work-diary"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
config = "0.15.8"
lettre = "0.11.12"
once_cell = "1.20.3"
pavao = "0.2.9"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }

[source.ustc]
registry = "sparse+https://mirrors.ustc.edu.cn/crates.io-index/"
